--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 
 <body>
@@ -14,45 +15,49 @@
         <!--one row for header-->
         <!-- Image and text -->
         <nav class="navbar navbar-light bg-faded">
-            
         </nav>
-
         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="/">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="/">
     <img src="https://st.depositphotos.com/1000893/1915/v/950/depositphotos_19159341-stock-illustration-stylized-wine-glass-whit-heart.jpg" width="30" height="30" class="d-inline-block align-top" alt="Stylised Wine Glass">
     Vino Finder
   </a>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/survey">Find Your Vino!</a>
-      </li>      
-    </ul>
-  </div>
-</nav>
-        
-	<div class="row">
-		<div class="col-md-12">
-    <div class="jumbotron">
-  <h1 class="display-3">Welcome to Vino Finder!</h1>
-  <p class="lead">Take the survey to find your wine!</p>
-  <hr class="my-4">
-  <p></p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
-</div>
-</div>
-</div>
-
-
-
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/survey">Find Your Vino!</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="jumbotron">
+                    <h1 class="display-3">Welcome to Vino Finder!</h1>
+                    <p class="lead">Take the survey to find your wine!</p>
+                    <hr class="my-4">
+                    <p></p>
+                    <p class="lead">
+                        <a class="btn btn-primary btn-lg" href="/survey" role="button">Take the Survey!</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <a href="/api/wines">API Wines</a>
+            </div>
+        </div>
+        <footer class="footerhome">
+            <div class="container">
+                <span class="text-muted">Copyright &copy;Ovie Omene 2017</span>
+            </div>
+        </footer>
 </body>
 
 </html>
