deploying on heroku

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -318,7 +318,7 @@
 
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Copyright &copy;Ovie Omene 2017</span>
+        <span>Copyright &copy;Ovie Omene 2017</span>
       </div>
     </footer>
 </body>
