--- a/app/public/home.html
+++ b/app/public/home.html
@@ -55,7 +55,7 @@
         </div>
         <footer class="footerhome">
             <div class="container">
-                <span class="text-muted">Copyright &copy;Ovie Omene 2017</span>
+                <span>Copyright &copy;Ovie Omene 2017</span>
             </div>
         </footer>
 </body>
